--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-cli",
+  "name": "mmm",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -15,7 +15,9 @@
     "moment": "^2.22.2",
     "vue": "^2.5.17",
     "vue-lazyload": "^1.2.6",
-    "vue-router": "^3.0.1"
+    "vue-product-zoomer": "^2.0.11",
+    "vue-router": "^3.0.1",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.4",
