--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@vue/cli-plugin-babel": "^3.0.4",
     "@vue/cli-plugin-eslint": "^3.0.4",
     "@vue/cli-service": "^3.0.4",
+    "babel-plugin-component": "^1.1.1",
     "vue-template-compiler": "^2.5.17"
   },
   "eslintConfig": {
